--- a/index.html
+++ b/index.html
@@ -4,27 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Nico Exxon
+    <title>Mi primera pagina web - ipiales
     </title>
 </head>
 <body>
-    <div>
-    <h1>
-        pagina asi bien <strong class="title">maniacota</strong> 😹
-    </h1>
-    <p>
-        esto es un <strong class="skibidi"> skibidi </strong> parrafo, jaja salu2
-    </p>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">esto es un rick rolleo</a>
-    <p>
-        <a href="https://github.com/dashboard">link al github juasjuas</a>
-    </p>
-    </div>
+    <section class="bienvenida">
+        <h1>
+            bienvenido a mi primera pagina web!!!
+        </h1>
+        <p>Aqui descubriras todo lo qeu hace a Ipiales u  lugar unico: desde su historia
+            y cultura, hasta sus hermosos paisajes y su famosa arquitectura.
+             en esta pagina se mirara todo lo que la ciudad de Ipiales tiene para ofrecer, ya sea
+             que estes planeando una visita o simplemente quieras conocer mas sobre ella.</p>
+    </section>
 
-    <div>
-        <img src="gato sandia.jpg" class="img1" alt=""width="300" height="200"> 
-        <img src="ma quiero mas frijoles.jpg" class="img2"width="300" height="200">
-
-    </div>
 </body>
 </html>
