--- a/index.html
+++ b/index.html
@@ -8,15 +8,48 @@
     </title>
 </head>
 <body>
-    <section class="bienvenida">
-        <h1>
-            bienvenido a mi primera pagina web!!!
-        </h1>
-        <p>Aqui descubriras todo lo qeu hace a Ipiales u  lugar unico: desde su historia
-            y cultura, hasta sus hermosos paisajes y su famosa arquitectura.
-             en esta pagina se mirara todo lo que la ciudad de Ipiales tiene para ofrecer, ya sea
-             que estes planeando una visita o simplemente quieras conocer mas sobre ella.</p>
-    </section>
+    <header class="header">
+        <nav class="header__menu">
+            <a class= "header__menu__link" href="index.html"> 
+                <img src="bandera de ipiales.png" alt="" width="40px"> 
+            </a>
+            <a class= "header__menu__link" href="">
+                <img src="ico.png" alt="" width="40px">
+             </a>
+            <a class= "header__menu__link" href=""> 
+                <img src="persona.png" alt="" width="40px">
+            </a>
+        </nav>
+    </header>  
+    <main class="contenedor_padre">
+        <section class="bienvenida">
+            <h1>
+                bienvenido a mi primera pagina web!!!
+            </h1>
+            <p>Aqui descubriras todo lo qeu hace a Ipiales u  lugar unico: desde su historia
+                y cultura, hasta sus hermosos paisajes y su famosa arquitectura.
+                en esta pagina se mirara todo lo que la ciudad de Ipiales tiene para ofrecer, ya sea
+                que estes planeando una visita o simplemente quieras conocer mas sobre ella.</p>
+        </section>
+        <div class="segundo_contenedor">
+            <div>  
+                <p>
+                    no se que poner Aqui
+                </p>
+                <p>
+                    aqui otro texto
+                </p>
+            </div>
+            <div class="contenedor_imagen">
+                <img src="" alt="aqui va la imagen ">
+            </div>
+        </div>
+        <div class="tercer_contenedor">
+            <a href="">plataforma</a>
+            <a href=""> cultura</a>
+            <a href="">turismo</a>
+        </div>
 
+    </main>
 </body>
 </html>
