clase 12 de noviembre

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>
                 bienvenido a mi primera pagina web!!!
             </h1>
-            <p>Aqui descubriras todo lo qeu hace a Ipiales u  lugar unico: desde su historia
+            <p>Aqui descubriras todo lo que hace a Ipiales un lugar unico: desde su historia
                 y cultura, hasta sus hermosos paisajes y su famosa arquitectura.
                 en esta pagina se mirara todo lo que la ciudad de Ipiales tiene para ofrecer, ya sea
                 que estes planeando una visita o simplemente quieras conocer mas sobre ella.</p>
@@ -34,18 +34,17 @@
         <div class="segundo_contenedor">
             <div>  
                 <p>
-                    no se que poner Aqui
+                   Ipiales es una ciudad ubicada en el sur de Colombia, conocida por su encanto cultural y su impresionante entorno natural. Rodeada por montañas y cercada por el río Guáitara, Ipiales es famosa por su cercanía a la frontera con Ecuador y su rica tradición histórica. Entre sus principales atractivos destaca el Santuario de Las Lajas, una joya arquitectónica que atrae a miles de visitantes cada año. Su clima templado y su gente cálida hacen de Ipiales un lugar ideal para explorar, descubrir y disfrutar de la diversidad cultural y natural del sur colombiano. 
                 </p>
                 <p>
-                    aqui otro texto
+                    aqui tienes algunas paginas que recopilan alguna informacion que necesitas saber de esta hermosa ciudad
                 </p>
             </div>
             <div class="contenedor_imagen">
-                <img src="" alt="aqui va la imagen ">
+                <img claas= "imagen_ipiales" src="ipiales.jpeg">
             </div>
-        </div>
         <div class="tercer_contenedor">
-            <a href="">plataforma</a>
+            <a href="historia.html">historia</a>
             <a href=""> cultura</a>
             <a href="">turismo</a>
         </div>
