--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
 </head>
 <body>
-    <header class="header">
+    <header class="header1">
         <nav class="header__menu">
             <a class= "header__menu__link" href="index.html"> 
                 <img src="bandera de ipiales.png" alt="" width="40px"> 
@@ -16,7 +16,7 @@
             <a class= "header__menu__link" href="">
                 <img src="ico.png" alt="" width="40px">
              </a>
-            <a class= "header__menu__link" href=""> 
+            <a class= "header__menu__link" href="contacto.html"> 
                 <img src="persona.png" alt="" width="40px">
             </a>
         </nav>
@@ -45,8 +45,8 @@
             </div>
         <div class="tercer_contenedor">
             <a href="historia.html">historia</a>
-            <a href=""> cultura</a>
-            <a href="">turismo</a>
+            <a href="cultura.html"> cultura</a>
+            <a href="turismo.html">turismo</a>
         </div>
 
     </main>
