--- a/historia.html
+++ b/historia.html
@@ -8,7 +8,7 @@
     </title>
 </head>
 <body>
-    <header class="header">
+    <header class="header3">
         <nav class="header__menu">
             <a class= "header__menu__link" href="index.html"> 
                 <img src="bandera de ipiales.png" alt="" width="40px"> 
