ultimo commit de actualizacion

--- a/cultura.html
+++ b/cultura.html
@@ -23,38 +23,33 @@
     </header>
     <main class="contenedor_padre">
         <section class="bienvenida">
-            <h1>
+            <h1 >
                 Cultura de Ipiales
             </h1>
-            <p>
-                Ipiales tiene una amplia actividad intelectual, artística, social; <br>
-                 entendiéndose como cultura todo el quehacer del hombre, en sus más diversas manifestaciones.<br>
-                 <br>
-                 En lo temático y de difusión existen programaciones organizadas<br>
-                por los instituciones y grupos culturales: exposiciones, conferencias, conciertos,<br>
-                presentaciones artísticas, musicales, teatrales, danzas, recitales, cuenteros, cine,<br>
-                encuentros de indígenas, fiestas patronales, gastronomía, artesanías, turismo ecológico, caminatas, etc.<br>
-                <br>
+            <p class="parrafo_cultura">
+                Ipiales tiene una amplia actividad intelectual, artística, social; 
+                 entendiéndose como cultura todo el quehacer del hombre, en sus más diversas manifestaciones.
+                 En lo temático y de difusión existen programaciones organizadas
+                por los instituciones y grupos culturales: exposiciones, conferencias, conciertos,
+                presentaciones artísticas, musicales, teatrales, danzas, recitales, cuenteros, cine,
+                encuentros de indígenas, fiestas patronales, gastronomía, artesanías, turismo ecológico, caminatas, etc.
             </p>
                 <h1>
                     Entidades culturales
                 </h1>
-            <p>
-                <b>La Casa de la Cultura</b>, fundada el 8 de noviembre de 1971. Programa exposiciones de pintura,<br>
-                 cursos, conferencias, presentaciones de cine, y la biblioteca pública; apoya al grupo Batuta,<br>
-                  y a la Banda Municipal de Músicos, que tienen su retreta cada viernes.<br>
-                <br>
-                <b>Área Cultural del Banco de la República</b>, tiene programación anual, con exposiciones,conciertos,<br>
-                 conferencias, cursos, y la biblioteca pública. En ocasiones llevan sus servicios al parque y a otras entidades.<br>
-                 <br>
-                 <b>La “Sociedad El Carácter”</b>, fundada el 1 de diciembre de 1913, organización centenaria,<br>
-                  patrimonio cultural del municipio y referenciada como la más prestigiosa del Departamento de Nariño.<br>
-                  <br>
-                  Entre otras entidades culturales se cuenta con el Centro Cultural Binacional y la Casa Cultural Montalvina <br>
-                  en la casa de Aduanas del puente natural de Rumichaca, Coros Cantares del Sur, La Coral del Miserere, el Grupo Cultural <br>
-                  “Cincel”, revista cultural Pan de Maíz, Grupo “Los Chasquis”, Fundación cultural “Familia Ipial”, Grupo de Danzas Amanecer <br>
-                  Andino, Academia Artística D’Abreo (escuela de danza), Fundación Pioneros, Sala Luna Teatro, Asociación de Artistas <br>
-                  y Artesanos del Carnaval del Sur, Arte y Magia del Carnaval, Fundación “Antonia Josefina Obando”, el Centro de Estudios <br>
+            <p class ="parrafo_cultura">
+                <b>La Casa de la Cultura</b>, fundada el 8 de noviembre de 1971. Programa exposiciones de pintura,
+                 cursos, conferencias, presentaciones de cine, y la biblioteca pública; apoya al grupo Batuta,
+                  y a la Banda Municipal de Músicos, que tienen su retreta cada viernes.
+                <b>Área Cultural del Banco de la República</b>, tiene programación anual, con exposiciones,conciertos,
+                 conferencias, cursos, y la biblioteca pública. En ocasiones llevan sus servicios al parque y a otras entidades.
+                 <b>La “Sociedad El Carácter”</b>, fundada el 1 de diciembre de 1913, organización centenaria,
+                  patrimonio cultural del municipio y referenciada como la más prestigiosa del Departamento de Nariño.
+                  Entre otras entidades culturales se cuenta con el Centro Cultural Binacional y la Casa Cultural Montalvina 
+                  en la casa de Aduanas del puente natural de Rumichaca, Coros Cantares del Sur, La Coral del Miserere, el Grupo Cultural 
+                  “Cincel”, revista cultural Pan de Maíz, Grupo “Los Chasquis”, Fundación cultural “Familia Ipial”, Grupo de Danzas Amanecer 
+                  Andino, Academia Artística D’Abreo (escuela de danza), Fundación Pioneros, Sala Luna Teatro, Asociación de Artistas 
+                  y Artesanos del Carnaval del Sur, Arte y Magia del Carnaval, Fundación “Antonia Josefina Obando”, el Centro de Estudios 
                   Históricos Binacional, el Centro Histórico Nación de los Pastos, entre tantas otras organizaciones.
             </p>
         </section>
