--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
                 <p>
                     aqui tienes algunas paginas que recopilan alguna informacion que necesitas saber de esta hermosa ciudad
                 </p>
-            </div>
             <div class="contenedor_imagen">
-                <img claas= "imagen_ipiales" src="ipiales.jpeg">
+                   <img class= "imagen_ipiales" src="ipiales.jpeg">
+            </div>    
+            <div class="tercer_contenedor">
+                    
+               <a class="presentacion__enlaces__link" href="historia.html">HISTORIA</a>
+               <a class="presentacion__enlaces__link" href="cultura.html"> CULTURA</a>
+               <a class="presentacion__enlaces__link" href="turismo.html">TURISMO</a>
             </div>
-        <div class="tercer_contenedor">
-            <a href="historia.html">historia</a>
-            <a href="cultura.html"> cultura</a>
-            <a href="turismo.html">turismo</a>
         </div>
+        
 
     </main>
 </body>
