--- a/turismo.html
+++ b/turismo.html
@@ -26,7 +26,7 @@
             <h1>
                 turismo
             </h1>
-            <p>
+            <p class="parrafo_cultura">
             En Ipiales se visualizan varios aspectos en el turismo, que le imprimen a la comarca un potencial valioso.<br>
             <br>
             <b>Arquitectónico</b> el Santuario de las Lajas, el centro poblado de Las Lajas, la Casa de Aduana; los parques, templos, <br>
