--- a/historia.html
+++ b/historia.html
@@ -26,7 +26,7 @@
             <h1>
                 Historia de Ipiales
             </h1>
-            <p>
+            <p class="parrafo_cultura">
                 En época prehispánica la comarca estaba habitada por el pueblo de los pastos,<br>
                 el mismo que resistió a la invasión de los incas cuando estos trataron de conquistar<br>
                  la región bajo el mando de Huayna Cápac, hacia 1480. La "Nación de los Pastos" era un<br>
